--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Quotes</title>
     <style>
+        :root {
+            --mood: #007BFF;
+        }
+
+        html {
+            height: 100%;
+            width: 100%;
+        }
+
         body {
             font-family: Arial, sans-serif;
             background-color: #f5f5f5;
@@ -13,27 +23,36 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+
+
         }
+
         .container {
             text-align: center;
-            background-color: #fff;
+            /* background-color: hsla(0, 0%, 100%, 0.02); */
             padding: 2rem;
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
         }
+
         .Quote {
             display: block;
             font-size: 1.2rem;
             color: #333;
             margin-bottom: 1.5rem;
             padding: 1rem;
-            border-left: 5px solid #007BFF;
-            background-color: #f9f9f9;
+            border-left: 5px solid var(--mood);
+            background-color: hsla(0, 0%, 98%, 0.7);
             border-radius: 5px;
         }
+
         .btn {
-            background-color: #007BFF;
+            background-color: var(--mood);
             color: #fff;
+
             border: none;
             border-radius: 5px;
             padding: 0.75rem 1.5rem;
@@ -41,16 +60,18 @@
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
-        .btn:hover {
-            background-color: #0056b3;
+
+        .eyeball_hurt {
+            mix-blend-mode: difference;
         }
     </style>
 </head>
+
 <body id="Smth">
     <div class="container">
         <span class="Quote">Click the button to get a random quote!</span>
         <br>
-        <button class="btn">Get Quote</button>
+        <button class="btn"><span class="eyeball_hurt">Get Quote</span></button>
     </div>
     <script>
         console.log('All quotes are from https://goodreads.com/quotes');
@@ -58,7 +79,11 @@
         const btn = document.querySelector('.btn');
         const url = `${window.location}quotes/random`;
         const image_url = `${window.location}image/`;
-        btn.addEventListener('click', () => {
+        const to_put = document.getElementById('Smth')
+        let temp_stor;
+
+        // btn.addEventListener('click', () => {
+        function updateQuotes() {
             fetch(url)
                 .then(response => response.json())
                 .then(data => {
@@ -68,8 +93,16 @@
             fetch(image_url)
                 // .then(response => document.getElementById('Smth').style.backgroundImage = `url(${response.url})`) // This is not working bc its a url param
                 // .then(response => console.log(response.body)); // This is not working either it says ReadableStream
-                .then(response => console.log(response));
-        });
+                // .then(response => console.log(response.html)); // not a thing
+                .then(response => response.json())
+                // .then(data => document.getElementById('Smth').style.backgroundImage = `url(${data})`);
+                .then(data => { document.documentElement.style.setProperty('--mood', data['coloooors']); to_put.style.backgroundImage = `url(${data['the_img']})` }); // LMAO
+            // });
+        };
+        btn.addEventListener('click', updateQuotes);
+        updateQuotes();
+
     </script>
 </body>
+
 </html>
